--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
 //	implementation 'org.apache.kafka:kafka-streams'
 //	implementation 'org.springframework.kafka:spring-kafka'
 //	implementation 'org.springframework.session:spring-session-data-redis'
