--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
           issuer-uri: "http://localhost:8081"
   jpa:
     hibernate:
-      ddl-auto: 'create'
+      ddl-auto: 'none'
     show-sql: true
   datasource:
     hikari:
